[project]
name = "cvmamba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mamba-ssm",
    "opencv-python>=4.10.0.84",
    "tensorboard>=2.18.0",
    "timm>=1.0.11",
    "torch>=2.5.0",
    "torchvision>=0.20.0",
    "tqdm>=4.66.5",
]

[tool.uv.sources]
mamba-ssm = { git = "https://github.com/state-spaces/mamba.git" }


